--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 
     // Circular image
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
+    implementation 'com.balysv:material-ripple:1.0.2'
+
+    implementation 'com.github.bumptech.glide:glide:3.7.0'             // image loader
 
     implementation 'com.github.captain-miao:optroundcardview:1.0.0'
     implementation 'com.leavjenn.smoothdaterangepicker:library:0.2.0'
