added data entry

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".EnterDataActivity">
+        </activity>
         <activity android:name=".StuffActivity">
         </activity>
         <activity android:name=".ProfileActivity">
